src/objects/MUSW_Application2__c.object
<CustomObject>
    <description>DO NOT USE. Planning Applications eg. Site Plan</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BG_Bluebeam_Project_Id__c</fullName>
        <description>This is self-populated by the Bluebeam project Id that is associated with this application record. This is a required field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BG Bluebeam Project Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Board</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date the application was fully completed/submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <description>In applications that require approval or hearings, this shows the date that decision was made.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of what the application is for.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issued_Number__c</fullName>
        <description>The permanent application number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account associated with the application. This is only referred to by Account Carts.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact applicant associated with the application.</description>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Application2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW_BG_Bluebeam_Project_Id__c</fullName>
        <description>This is self-populated by the Bluebeam project Id that is associated with this application record. This is a required field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BG Bluebeam Project Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW_Completion_Date__c</fullName>
        <description>Date the application was fully completed/submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW_Decision_Date__c</fullName>
        <description>In applications that require approval or hearings, this shows the date that decision was made.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW_Description__c</fullName>
        <description>Description of what the application is for.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW_Issued_Number__c</fullName>
        <description>The permanent application number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW_Status__c</fullName>
        <description>The current status of the application. This picklist can be defined according to the client&apos;s business processes.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed due to Inactivity</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW_Total_Balance__c</fullName>
        <formula>MUSW_Total_Fees__c - MUSW_Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW_Total_Fees__c</fullName>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW_Total_Payments__c</fullName>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variance</fullName>
                </value>
                <value>
                    <fullName>Development Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of the application. This picklist can be defined according to the client&apos;s business processes.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed due to Inactivity</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <formula>Total_Fees__c - Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variance</fullName>
                </value>
                <value>
                    <fullName>Development Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if it is renewal  application it will  be checked</description>
        <label>isRenewal</label>
        <type>Checkbox</type>
    </fields>
    <label>License Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Application_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>